Adjust $spacing, save a query, fix _sanitize_comment()

--- a/frontend/src/scss/skin-default/variables.scss
+++ b/frontend/src/scss/skin-default/variables.scss
@@ -16,6 +16,7 @@ $input-box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
 $enable-gradients: true;
 
 // Making everything nearer, less paddings
+$spacer: .4rem;
 $grid-gutter-width: 10px;
 $card-spacer-y: .25rem;
 $card-spacer-x: .25rem;
